refactor : supabase 종속성 제거 및 core 서버로 통신
